# cvoicecontrol

./: .gitignore  AUTHORS  BUGS  FAQ  INSTALL  Makefile.am  README  configure.ac
docs/en/: Makefile.am  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html
src/: Makefile.am  audio-alsa.c  audio-oss.c  audio.h  bb_queue.c  bb_queue.h  configuration.c  configuration.h  cvoicecontrol.c  cvoicecontrol.h  keypressed.c  keypressed.h  microphone_config.c  microphone_config.h  mixer-alsa.c  mixer-oss.c  mixer.h  model.c  model.h  model_editor.c  model_editor.h  ncurses_tools.c  ncurses_tools.h  preprocess.c  preprocess.h  queue.h  realfftf.c  realfftf.h  score.c  score.h  semaphore.c  semaphore.h
